alb-controller/log-generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-generator
  name: deployment-log-generator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-log-generator
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-log-generator
    spec:
      containers:
      - image: madebybk/nextjs-random-json-logger:latest
        imagePullPolicy: Always
        name: app-log-generator
        ports:
        - containerPort: 80
