alb-controller/log-generator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "log-generator-service"
  namespace: "log-generator"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "log-generator"
