alb-controller/log-generator-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "log-generator-ingress"
  namespace: "log-generator"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: log-generator
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "log-generator-service"
              servicePort: 80
